--- a/models.ipynb
+++ b/models.ipynb
@@ -45,7 +45,8 @@
     "train = pd.read_csv(os.path.join('transform', 'train.csv'))\n",
     "test = pd.read_csv(os.path.join('transform', 'test.csv'))\n",
     "\n",
-    "categorical = ['hour', 'month', 'week', 'dayofweek']\n",
+    "\n",
+    "categorical = ['month', 'week', 'dayofweek']\n",
     "# train[categorical] = train[categorical].astype('category')\n",
     "# test[categorical] = test[categorical].astype('category')"
    ],
@@ -117,33 +118,34 @@
     "import lightgbm as lgb\n",
     "import optuna\n",
     "from sklearn.metrics import root_mean_squared_error\n",
-    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.model_selection import KFold, cross_val_score, GroupKFold\n",
     "\n",
     "\n",
     "def define_lightgbm_model(trial):\n",
     "    params = {\n",
     "        'objective': 'root_mean_squared_error',\n",
     "        'boosting_type': 'gbdt',\n",
-    "        'num_leaves': trial.suggest_int('num_leaves', 40, 256),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 5, 19),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 6e-3, 5e-2, log=True),\n",
-    "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
+    "        'max_bin': trial.suggest_int('max_bin', 10, 200),\n",
+    "        'num_leaves': trial.suggest_int('num_leaves', 100, 400),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 9, 19),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-4, 5e-2, log=True),\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 200, 1000),\n",
     "        'tree_learner': 'voting',\n",
-    "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.4, 1.0, log=True),\n",
-    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.4, 1.0, log=True),\n",
+    "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.6, 1.0, log=True),\n",
+    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.4, 0.8, log=True),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 250),\n",
-    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 5.0, log=True),\n",
-    "        'bagging_freq': 1,\n",
+    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-2, 1, log=True),\n",
+    "        'bagging_freq': trial.suggest_int('bagging_freq', 1, 5),\n",
     "        'device': 'cpu',\n",
     "        'n_jobs': -1,\n",
-    "        'random_state': trial.suggest_int('random_state', 0, 100),\n",
+    "        'random_state': 4,\n",
     "        'verbosity': -1\n",
     "    }\n",
     "    return lgb.LGBMRegressor(**params)\n",
     "\n",
     "def objective_lightgbm(trial):\n",
     "    model = define_lightgbm_model(trial)\n",
-    "    kf = KFold(n_splits=10, random_state=4, shuffle=True)\n",
+    "    kf = GroupKFold(n_splits=4)\n",
     "    scores = cross_val_score(model, X, y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
     "    return scores.mean() * (-1)"
    ],
@@ -174,7 +176,7 @@
    "source": [
     "lgb_model = define_lightgbm_model(study_lightgbm.best_trial)\n",
     "lgb_model.fit(X, y)\n",
-    "lightgbm_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'bagging_fraction', 'colsample_bytree', 'min_data_in_leaf', 'random_state']\n",
+    "lightgbm_params = ['max_bin', 'num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'bagging_fraction', 'colsample_bytree', 'min_data_in_leaf']\n",
     "lgb_pred = lgb_model.predict(X_test)\n",
     "root_mean_squared_error(y_test, lgb_pred)"
    ],
@@ -347,20 +349,20 @@
     "\n",
     "def define_cat_model(trial):\n",
     "    params = {\n",
-    "        'iterations': trial.suggest_int('iterations', 100, 1000),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 1e-5, 5e-2, log=True),\n",
-    "        'depth': trial.suggest_int('depth', 5, 15),\n",
+    "        'iterations': trial.suggest_int('iterations', 200, 700),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 5e-2, log=True),\n",
+    "        'depth': trial.suggest_int('depth', 8, 15),\n",
     "        'grow_policy': 'Depthwise',\n",
-    "        'l2_leaf_reg': trial.suggest_float('l2_leaf_reg', 1e-5, 5e-2, log=True),\n",
-    "        'subsample': trial.suggest_float('subsample', 0.8, 0.9, log=True),\n",
+    "        'l2_leaf_reg': trial.suggest_float('l2_leaf_reg', 1e-3, 5e-2, log=True),\n",
+    "        'subsample': trial.suggest_float('subsample', 0.5, 0.9, log=True),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 200),\n",
-    "        'random_state': trial.suggest_int('random_state', 0, 100),\n",
+    "        'random_state': 4,\n",
     "    }\n",
     "    return CatBoostRegressor(**params)\n",
     "\n",
     "def objective_cat(trial):\n",
     "    model = define_cat_model(trial)\n",
-    "    kf = KFold(n_splits=10, random_state=4, shuffle=True)\n",
+    "    kf = KFold(n_splits=5, random_state=4, shuffle=True)\n",
     "    scores = cross_val_score(model, X, y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
     "    return scores.mean() * (-1)"
    ],
@@ -383,13 +385,26 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "cat_model = define_lightgbm_model(study_lightgbm.best_trial)\n",
+    "cat_model = define_cat_model(study_cat.best_trial)\n",
     "cat_model.fit(X, y)\n",
     "lightgbm_params = ['iterations', 'learning_rate', 'depth', 'l2_leaf_reg', 'subsample', 'min_data_in_leaf', 'random_state']\n",
     "cat_pred = cat_model.predict(X_test)\n",
     "root_mean_squared_error(y_test, cat_pred)"
    ],
    "id": "db253ddf635c602b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from sklearn.model_selection import LearningCurveDisplay\n",
+    "\n",
+    "\n",
+    "LearningCurveDisplay.from_estimator(cat_model, X, y, cv=10, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+   ],
+   "id": "eaad7922957586b6",
    "outputs": [],
    "execution_count": null
   },
@@ -439,7 +454,7 @@
     "        # 'enable_categorical': True,\n",
     "        'device': 'cpu',\n",
     "        'n_jobs': -1,\n",
-    "        'random_state': trial.suggest_int('random_state', 0, 100),\n",
+    "        'random_state': 4,\n",
     "    }\n",
     "    return xgb.XGBRegressor(**params)\n",
     "\n",
@@ -592,7 +607,7 @@
     "\n",
     "\n",
     "stack_model = StackingRegressor(\n",
-    "    estimators=[('lgb', lgb_model), ('cat', cat_model)],\n",
+    "    estimators=[('lgb', lgb_model), ('cat', cat_model), ('xgb', xgb_model)],\n",
     "    final_estimator=LinearRegression(),\n",
     "    cv=10,\n",
     "    n_jobs=-1,\n",
@@ -612,7 +627,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(stack_model.predict(test.drop(columns=['id'], axis=1)), 'stack_cat_lgb.csv')",
+   "source": [
+    "stack_pred = stack_model.predict(test.drop(columns=['id'], axis=1))\n",
+    "save_to_csv(stack_pred, 'stack_xgb_cat_lgb.csv')"
+   ],
    "id": "9f21846de9642c71",
    "outputs": [],
    "execution_count": null
@@ -631,7 +649,7 @@
     "\n",
     "\n",
     "voting_model = VotingRegressor(\n",
-    "    estimators=[('lgb', lgb_model), ('xgb', cat_model)],\n",
+    "    estimators=[('lgb', lgb_model), ('cat', cat_model), ('xgb', xgb_model)],\n",
     "    n_jobs=-1\n",
     ").fit(X, y)"
    ],
@@ -648,7 +666,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(voting_model.predict(test.drop(columns=['id'], axis=1)), 'voting_cat_lgb.csv')",
+   "source": [
+    "voting_pred = voting_model.predict(test.drop(columns=['id'], axis=1))\n",
+    "save_to_csv(voting_pred, 'voting_xgb_cat_lgb.csv')"
+   ],
    "id": "d9e910710f09aef6",
    "outputs": [],
    "execution_count": null
