--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -238,25 +238,25 @@
     "\n",
     "def fill_train(column_name='dayofweek'):\n",
     "    column_values = train[column_name].unique()\n",
-    "    for date in column_values:\n",
-    "        for i, column in enumerate(starts_with):\n",
-    "            similar_columns = [col for col in train.columns if col.startswith(column)]\n",
-    "            df = train.loc[train[column_name] == date, similar_columns].copy()\n",
+    "    for date_unit in column_values:\n",
+    "        for i, col in enumerate(starts_with):\n",
+    "            similar_columns = [col for col in train.columns if col.startswith(col)]\n",
+    "            df = train.loc[train[column_name] == date_unit, similar_columns].copy()\n",
     "            if not df.empty:\n",
     "                try:\n",
-    "                    train.loc[train[column_name] == date, similar_columns] = imputers[i].fit_transform(df)\n",
+    "                    train.loc[train[column_name] == date_unit, similar_columns] = imputers[i].fit_transform(df)\n",
     "                except ValueError:\n",
     "                    train.drop(index=df.index, inplace=True)\n",
     "                    train.reset_index(drop=True, inplace=True)\n",
     "\n",
     "def fill_test(column_name='dayofweek'):\n",
     "    column_values = test[column_name].unique()\n",
-    "    for date in column_values:\n",
-    "        for i, column in enumerate(starts_with):\n",
-    "            similar_columns = [col for col in test.columns if col.startswith(column)]\n",
-    "            df = test.loc[test[column_name] == date, similar_columns].copy()\n",
+    "    for date_unit in column_values:\n",
+    "        for i, col in enumerate(starts_with):\n",
+    "            similar_columns = [col for col in test.columns if col.startswith(col)]\n",
+    "            df = test.loc[test[column_name] == date_unit, similar_columns].copy()\n",
     "            if not df.empty:\n",
-    "                test.loc[test[column_name] == date, similar_columns] = imputers[i].transform(df)\n",
+    "                test.loc[test[column_name] == date_unit, similar_columns] = imputers[i].transform(df)\n",
     "\n",
     "def drop_high_nans():  # usuwamy kolumny o dużej liczbie wartości NaN\n",
     "    columns_nans = []\n",
@@ -271,8 +271,8 @@
     "    return [col for col in upper_t.columns if any(upper_t[col] > 0.99)]\n",
     "\n",
     "def drop_low_correlated_columns_to_pm2_5():\n",
-    "    corr = train.corr()['pm2_5'].to_frame()\n",
-    "    return corr[(corr['pm2_5'] < 0.01) & (corr['pm2_5'] > -0.01)].index.to_numpy()\n",
+    "    corr = train.corr(numeric_only=True)['pm2_5'].to_frame()\n",
+    "    return corr[(corr['pm2_5'] < 0.1) & (corr['pm2_5'] > -0.1)].index.to_numpy()\n",
     "\n",
     "def subract_azimuth_zenith(dataframe):\n",
     "    zenith_columns = [zenith for zenith in dataframe.columns if 'zenith' in zenith]\n",
@@ -286,7 +286,7 @@
     "\n",
     "\n",
     "starts_with = train.columns.str.split('_', expand=True).levels[0].to_frame()\n",
-    "starts_with.drop(['month', 'pm2'], inplace=True)\n",
+    "starts_with.drop(['month', 'pm2', 'id', 'city', 'date', 'country', 'site', 'hour', 'week', 'year', 'dayofweek'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
     "\n",
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
@@ -301,6 +301,202 @@
     "train.info()"
    ],
    "id": "4cf45820641da986",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Imputacja danych przy użyciu dat",
+   "id": "dbb65ee72ced696b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import calendar\n",
+    "\n",
+    "\n",
+    "def draw_calendar(dates_to_highlight, year):\n",
+    "    plt.rcParams.update({'font.size': 12})\n",
+    "    cal = calendar.Calendar(firstweekday=0)\n",
+    "    fig, ax = plt.subplots(nrows=4, ncols=3, figsize=(15, 10))\n",
+    "    for m in range(12):\n",
+    "        x, y = divmod(m, 3)\n",
+    "        month_days = cal.monthdayscalendar(year, m + 1)\n",
+    "        \n",
+    "        ax[x, y].set_xlim(0, 7)\n",
+    "        ax[x, y].set_ylim(0, len(month_days))\n",
+    "        \n",
+    "        ax[x, y].axis('off')\n",
+    "        \n",
+    "        days_of_week = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']\n",
+    "        for i, day in enumerate(days_of_week):\n",
+    "            ax[x, y].text(i + 0.5, len(month_days) - 0.5, day, ha='center', va='center', weight='bold')\n",
+    "        \n",
+    "        for r, week in enumerate(month_days):\n",
+    "            for c, day in enumerate(week):\n",
+    "                if day != 0:\n",
+    "                    date_unit = pd.Timestamp(year, m + 1, day)\n",
+    "                    highlight = date_unit in dates_to_highlight\n",
+    "                    ax[x, y].text(c + 0.5, len(month_days) - r - 1.5, day, ha='center', va='center', \n",
+    "                            bbox=dict(facecolor='red' if highlight else 'white', edgecolor='black'))\n",
+    "        ax[x, y].set_title(f'Calendar {calendar.month_name[m + 1]} {year}')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "columns_worth_filling = [col for col in train.columns if train[col].isna().sum() != 0 and 0.5 < (train[col].notna().sum() / len(train)) < 0.9]\n",
+    "draw_calendar(set(train.loc[train['carbonmonoxide_co_column_number_density'].isna(), 'date']), year=2023)"
+   ],
+   "id": "b7b513a5b52ecffa",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### ACF, PACF",
+   "id": "16086f0a6dc7968b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "\n",
+    "\n",
+    "def plot_correlations():\n",
+    "    split_worth_filling = [[col for col in columns_worth_filling if start_with in col] for start_with in starts_with]\n",
+    "    split_worth_filling = [lst for lst in split_worth_filling if lst]\n",
+    "    for to_plot in split_worth_filling:\n",
+    "        fig, ax = plt.subplots(nrows=len(to_plot), ncols=2, figsize=(15, 30))\n",
+    "        for i, col in enumerate(to_plot):\n",
+    "            plot_acf(\n",
+    "                x=train[col],\n",
+    "                ax=ax[i, 0],\n",
+    "                missing='drop',\n",
+    "                title=f'ACF of {col}',\n",
+    "            )\n",
+    "            plot_pacf(\n",
+    "                x=train[col].dropna(),\n",
+    "                ax=ax[i, 1],\n",
+    "                title=f'PACF of {col}',\n",
+    "            )\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "        \n",
+    "plot_correlations()"
+   ],
+   "id": "337db2bc9fc644c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wybór kolumn do wypełnienia danymi",
+   "id": "615a169f389faf09"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "choosen_ones = [column for column in train.columns if '_solar_azimuth_angle' in column] + ['cloud_surface_albedo']",
+   "id": "6813584f57bc61fc",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Przed imputacją",
+   "id": "757c5ff4c81f3c7c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def plot_choosen_ones():\n",
+    "    fig, ax = plt.subplots(nrows=len(choosen_ones) // 4, ncols=4, figsize=(45, 30))\n",
+    "    for i, col in enumerate(choosen_ones):\n",
+    "        x, y = divmod(i, 4)\n",
+    "        sns.lineplot(data=train.loc[:, ['date', 'city', col]], x='date', y=col, hue='city', ax=ax[x, y])\n",
+    "        ax[x, y].set_title(col)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
+    "plot_choosen_ones()"
+   ],
+   "id": "8ef521a5aa313a45",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Sprawdzenie czy szereg jest stacjonarny",
+   "id": "416f42f189d11dda"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "\n",
+    "\n",
+    "if_stationary = [{column: adfuller(train[column].dropna())} for column in choosen_ones]"
+   ],
+   "id": "3ae78a03c7119697",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Imputacja przy wykorzystaniu ARIMA",
+   "id": "c38b2b55c6e88384"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# from statsmodels.tsa.arima.model import ARIMA\n",
+    "# \n",
+    "# \n",
+    "# cities = train['city'].unique()\n",
+    "# for column in choosen_ones:\n",
+    "#     for city in cities:\n",
+    "#         data = train.loc[train['city'] == city, ['date', column]].groupby('date').mean()\n",
+    "#         data.index = pd.DatetimeIndex(data.index).to_period('D')\n",
+    "#         impute_model = ARIMA(\n",
+    "#             endog=data,\n",
+    "#             order=(1, 0, 1),\n",
+    "#             missing='none'\n",
+    "#         ).fit()\n",
+    "#         \n",
+    "#         na_dates = data.loc[data[column].isna(), :].index\n",
+    "#         for date in na_dates:\n",
+    "#             data.at[pd.to_datetime(pd.to_datetime(str(date))), column] = impute_model.predict(start=date, end=date).values[0]\n",
+    "#             \n",
+    "#         for index, value in data.iterrows():\n",
+    "#             train.loc[(train['date'] == pd.to_datetime(str(index))) & (train['city'] == city), column] = value.iloc[0]"
+   ],
+   "id": "49e6bd3804c7b5ac",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Po imputacji",
+   "id": "23470236db3e6d81"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "plot_choosen_ones()",
+   "id": "328862e6defe0d50",
    "outputs": [],
    "execution_count": null
   },
@@ -324,7 +520,7 @@
     "# train = pd.concat([train, train_additional])\n",
     "# train.reset_index(drop=True, inplace=True)\n",
     "# \n",
-    "# train.info()"
+    "train.info()"
    ],
    "id": "81a9005ec2b73b6a",
    "outputs": [],
@@ -354,9 +550,9 @@
     "                rows, cols = divs[len(divs) // 2], divs[len(divs) // 2]\n",
     "            fig, ax = plt.subplots(nrows=rows, ncols=cols, figsize=(40, 30), squeeze=False)\n",
     "            fig.suptitle(column_group, fontsize=25)\n",
-    "            for j, column in enumerate(similar_columns):\n",
+    "            for j, col in enumerate(similar_columns):\n",
     "                x_cord, y_cord = divmod(j, cols)\n",
-    "                train[column].plot(kind='box', ax=ax[x_cord, y_cord], fontsize=15)\n",
+    "                train[col].plot(kind='box', ax=ax[x_cord, y_cord], fontsize=15)\n",
     "            plt.show()\n",
     "\n",
     "\n",
@@ -383,7 +579,7 @@
     "\n",
     "detect_outliers = zscore(train['pm2_5'])\n",
     "\n",
-    "quantiles = pd.DataFrame(list(zip(np.linspace(0.95, 1, 20), [np.quantile(detect_outliers, el) for el in np.linspace(0.95, 1, 20)])), columns=['quantile', 'zscore'])\n",
+    "quantiles = pd.DataFrame(list(zip(np.linspace(0.97, 1, 21), [np.quantile(detect_outliers, el) for el in np.linspace(0.97, 1, 21)], [np.quantile(train['pm2_5'], el) for el in np.linspace(0.97, 1, 21)])), columns=['quantile', 'zscore', 'pm2_5'])\n",
     "quantiles"
    ],
    "id": "e7d3f816a2bb205d",
@@ -409,20 +605,25 @@
     "    train.drop(indexes_to_drop, inplace=True)\n",
     "    train.reset_index(drop=True, inplace=True)\n",
     "    \n",
-    "def scale_pm2_5_outliers():\n",
-    "    out = train[zscore(train['pm2_5']) > np.quantile(detect_outliers, 0.99)]['pm2_5'].copy(deep=True)\n",
-    "    out *= 0.6\n",
-    "    train.loc[out.index, 'pm2_5'] = out\n",
+    "def cap_pm2_5_outliers():\n",
+    "    to_cap = np.quantile(detect_outliers, 0.99) * train['pm2_5'].std()\n",
+    "    train['pm2_5'] = train['pm2_5'].clip(upper=to_cap)\n",
     "\n",
     "\n",
-    "# scale_pm2_5_outliers()\n",
     "del_pm2_5_outliers()\n",
+    "# cap_pm2_5_outliers()\n",
     "\n",
     "train.info()"
    ],
    "id": "a3c1c6860a3b0de4",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wykorzystanie featuretools",
+   "id": "3714f2630c11f358"
   },
   {
    "metadata": {},
@@ -626,9 +827,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "xd = pd.read_csv(os.path.join('data', 'xd.csv'), header=0)\n",
-    "xd['pm2_5'] *= 1.05\n",
-    "xd.to_csv(os.path.join('data', 'xd1.csv'), index=False)"
+    "xd = pd.read_csv(os.path.join('data', 'lightgbm.csv'), header=0)\n",
+    "xd['pm2_5'] *= 0.99\n",
+    "xd.to_csv(os.path.join('data', 'lightgbm_even_better.csv'), index=False)"
    ],
    "id": "27b4bead0508e55f",
    "outputs": [],
