poprawa wyniki na 12.97 dla lgb

--- a/see_differences.ipynb
+++ b/see_differences.ipynb
@@ -61,6 +61,25 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "source": [
+    "def drop_high_nans():\n",
+    "    columns_nans = []\n",
+    "    for i, el in enumerate(train.columns):\n",
+    "        if train[el].isna().sum() / len(train) >= 0.9:\n",
+    "            columns_nans.append(el)\n",
+    "    return columns_nans\n",
+    "\n",
+    "\n",
+    "high_nans = drop_high_nans()\n",
+    "train, test = train.drop(columns=high_nans, axis=1), test.drop(columns=high_nans, axis=1)"
+   ],
+   "id": "265c089487a0cd3e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": "test.info()",
    "id": "b761e5825c8d4116",
    "outputs": [],
@@ -232,6 +251,14 @@
    "cell_type": "code",
    "source": "lgb.plot_importance(lightgbm, figsize=(20, 12), dpi=200)",
    "id": "c556902c8ab586f4",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "lgb.plot_tree(lightgbm, precision=2, figsize=(20, 12), show_info=['data_percentage'], dpi=200, orientation='vertical')",
+   "id": "d289d836392c079a",
    "outputs": [],
    "execution_count": null
   },
