--- a/models.ipynb
+++ b/models.ipynb
@@ -126,8 +126,8 @@
     "        'objective': 'root_mean_squared_error',\n",
     "        'boosting_type': 'gbdt',\n",
     "        'max_bin': trial.suggest_int('max_bin', 10, 200),\n",
-    "        'num_leaves': trial.suggest_int('num_leaves', 100, 400),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 9, 19),\n",
+    "        'num_leaves': trial.suggest_int('num_leaves', 50, 300),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 5, 12),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-4, 5e-2, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 200, 1000),\n",
     "        'tree_learner': 'voting',\n",
@@ -145,8 +145,8 @@
     "\n",
     "def objective_lightgbm(trial):\n",
     "    model = define_lightgbm_model(trial)\n",
-    "    kf = GroupKFold(n_splits=4)\n",
-    "    scores = cross_val_score(model, X, y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
+    "    gkf = GroupKFold(n_splits=12)\n",
+    "    scores = cross_val_score(model, X, y, groups=X['month'], cv=gkf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
     "    return scores.mean() * (-1)"
    ],
    "id": "e0c6cfa75b097d58",
@@ -362,8 +362,8 @@
     "\n",
     "def objective_cat(trial):\n",
     "    model = define_cat_model(trial)\n",
-    "    kf = KFold(n_splits=5, random_state=4, shuffle=True)\n",
-    "    scores = cross_val_score(model, X, y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
+    "    kf = GroupKFold(n_splits=X['month'].nunique())\n",
+    "    scores = cross_val_score(model, X['month'], y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
     "    return scores.mean() * (-1)"
    ],
    "id": "ca4234a745c21357",
@@ -387,7 +387,7 @@
    "source": [
     "cat_model = define_cat_model(study_cat.best_trial)\n",
     "cat_model.fit(X, y)\n",
-    "lightgbm_params = ['iterations', 'learning_rate', 'depth', 'l2_leaf_reg', 'subsample', 'min_data_in_leaf', 'random_state']\n",
+    "lightgbm_params = ['iterations', 'learning_rate', 'depth', 'l2_leaf_reg', 'subsample', 'min_data_in_leaf']\n",
     "cat_pred = cat_model.predict(X_test)\n",
     "root_mean_squared_error(y_test, cat_pred)"
    ],
