--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -258,7 +258,7 @@
     "            if not df.empty:\n",
     "                test.loc[test[column_name] == date_unit, similar_columns] = imputers[i].transform(df)\n",
     "\n",
-    "def drop_high_nans():  # usuwamy kolumny o dużej liczbie wartości NaN\n",
+    "def drop_high_nans():\n",
     "    columns_nans = []\n",
     "    for i, el in enumerate(train.columns):\n",
     "        if train[el].isna().sum() / len(train) >= 0.9:\n",
@@ -832,6 +832,14 @@
     "xd.to_csv(os.path.join('data', 'lightgbm_even_better.csv'), index=False)"
    ],
    "id": "27b4bead0508e55f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "d3fa3e3e17ca6bba",
    "outputs": [],
    "execution_count": null
   }
