--- a/models.ipynb
+++ b/models.ipynb
@@ -129,7 +129,7 @@
     "        'num_leaves': trial.suggest_int('num_leaves', 50, 300),\n",
     "        'max_depth': trial.suggest_int('max_depth', 5, 12),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-4, 5e-2, log=True),\n",
-    "        'n_estimators': trial.suggest_int('n_estimators', 200, 1000),\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 200, 700),\n",
     "        'tree_learner': 'voting',\n",
     "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.6, 1.0, log=True),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.4, 0.8, log=True),\n",
@@ -145,8 +145,8 @@
     "\n",
     "def objective_lightgbm(trial):\n",
     "    model = define_lightgbm_model(trial)\n",
-    "    gkf = GroupKFold(n_splits=12)\n",
-    "    scores = cross_val_score(model, X, y, groups=X['month'], cv=gkf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
+    "    gkf = GroupKFold(n_splits=X['dayofweek'].nunique())\n",
+    "    scores = cross_val_score(model, X, y, groups=X['dayofweek'], cv=gkf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
     "    return scores.mean() * (-1)"
    ],
    "id": "e0c6cfa75b097d58",
@@ -158,7 +158,7 @@
    "cell_type": "code",
    "source": [
     "study_lightgbm = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler())\n",
-    "study_lightgbm.optimize(objective_lightgbm, n_trials=100)"
+    "study_lightgbm.optimize(objective_lightgbm, n_trials=200)"
    ],
    "id": "21e4f067899ca658",
    "outputs": [],
@@ -351,7 +351,7 @@
     "    params = {\n",
     "        'iterations': trial.suggest_int('iterations', 200, 700),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 5e-2, log=True),\n",
-    "        'depth': trial.suggest_int('depth', 8, 15),\n",
+    "        'depth': trial.suggest_int('depth', 11, 20),\n",
     "        'grow_policy': 'Depthwise',\n",
     "        'l2_leaf_reg': trial.suggest_float('l2_leaf_reg', 1e-3, 5e-2, log=True),\n",
     "        'subsample': trial.suggest_float('subsample', 0.5, 0.9, log=True),\n",
@@ -362,8 +362,8 @@
     "\n",
     "def objective_cat(trial):\n",
     "    model = define_cat_model(trial)\n",
-    "    kf = GroupKFold(n_splits=X['month'].nunique())\n",
-    "    scores = cross_val_score(model, X['month'], y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
+    "    gkf = GroupKFold(n_splits=X['dayofweek'].nunique())\n",
+    "    scores = cross_val_score(model, X, y, groups=X['dayofweek'], cv=gkf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
     "    return scores.mean() * (-1)"
    ],
    "id": "ca4234a745c21357",
@@ -460,8 +460,8 @@
     "\n",
     "def objective_xgb(trial):\n",
     "    model = define_xgb_model(trial)\n",
-    "    kf = KFold(n_splits=5, random_state=4, shuffle=True)\n",
-    "    scores = cross_val_score(model, X, y, cv=kf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
+    "    gkf = GroupKFold(n_splits=X['dayofweek'].nunique())\n",
+    "    scores = cross_val_score(model, X, y, groups=X['dayofweek'], cv=gkf, n_jobs=-1, scoring='neg_root_mean_squared_error')\n",
     "    return scores.mean() * (-1)"
    ],
    "id": "1c600a7c761cd5d5",
