--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -272,7 +272,7 @@
     "\n",
     "def drop_low_correlated_columns_to_pm2_5():\n",
     "    corr = train.corr(numeric_only=True)['pm2_5'].to_frame()\n",
-    "    return corr[(corr['pm2_5'] < 0.1) & (corr['pm2_5'] > -0.1)].index.to_numpy()\n",
+    "    return corr[(corr['pm2_5'] < 0.01) & (corr['pm2_5'] > -0.01)].index.to_numpy()\n",
     "\n",
     "def subract_azimuth_zenith(dataframe):\n",
     "    zenith_columns = [zenith for zenith in dataframe.columns if 'zenith' in zenith]\n",
@@ -426,7 +426,7 @@
     "    plt.show()\n",
     "    \n",
     "    \n",
-    "plot_choosen_ones()"
+    "# plot_choosen_ones()"
    ],
    "id": "8ef521a5aa313a45",
    "outputs": [],
@@ -495,7 +495,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "plot_choosen_ones()",
+   "source": "# plot_choosen_ones()",
    "id": "328862e6defe0d50",
    "outputs": [],
    "execution_count": null
@@ -832,14 +832,6 @@
     "xd.to_csv(os.path.join('data', 'lightgbm_even_better.csv'), index=False)"
    ],
    "id": "27b4bead0508e55f",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "",
-   "id": "d3fa3e3e17ca6bba",
    "outputs": [],
    "execution_count": null
   }
