--- a/see_differences.ipynb
+++ b/see_differences.ipynb
@@ -52,7 +52,9 @@
    "cell_type": "code",
    "source": [
     "train.drop(columns=['id', 'city', 'country', 'site_id', 'site_latitude', 'site_longitude', 'hour', 'pm2_5'], inplace=True)\n",
-    "test.drop(columns=['id', 'city', 'country', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)"
+    "test.drop(columns=['id', 'city', 'country', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)\n",
+    "train.drop(columns=[column for column in train.columns if 'sensor_zenith' in column or 'sensor_azimuth' in column], inplace=True)\n",
+    "test.drop(columns=[column for column in test.columns if 'sensor_zenith' in column or 'sensor_azimuth' in column], inplace=True)"
    ],
    "id": "a0ad2d488119f18c",
    "outputs": [],
@@ -147,6 +149,7 @@
    "source": [
     "whole_dates = whole['date']\n",
     "whole.drop('date', axis=1, inplace=True)\n",
+    "whole = whole.sample(frac=1).reset_index(drop=True)\n",
     "whole.info()"
    ],
    "id": "721a867a29911e7e",
@@ -216,20 +219,12 @@
    "cell_type": "code",
    "source": [
     "study_lightgbm = optuna.create_study(direction='maximize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler())\n",
-    "study_lightgbm.optimize(objective, n_trials=100)"
-   ],
-   "id": "b485e693dad2e7fc",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
+    "study_lightgbm.optimize(objective, n_trials=100)\n",
+    "\n",
     "lightgbm = define_model(study_lightgbm.best_trial)\n",
     "lightgbm.fit(X_train, y_train)"
    ],
-   "id": "558d545c7e48637c",
+   "id": "b485e693dad2e7fc",
    "outputs": [],
    "execution_count": null
   },
@@ -265,6 +260,14 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "train = pd.concat([train, train_target], axis=1)",
+   "id": "9d393bde43d47f26",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "whole = pd.concat([whole_dates, whole], axis=1)\n",
     "\n",
@@ -278,7 +281,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "very_important = ['nitrogendioxide_tropopause_pressure', 'uvaerosolindex_sensor_altitude']\n",
+    "very_important = ['nitrogendioxide_tropopause_pressure', 'uvaerosolindex_sensor_altitude', 'ozone_o3_column_number_density_amf', 'ozone_o3_column_number_density']\n",
     "sns.lineplot(data=whole[['date', 'nitrogendioxide_tropopause_pressure', 'is_train']], x='date', y='nitrogendioxide_tropopause_pressure', hue='is_train')"
    ],
    "id": "a6a3f7609f8a8a3a",
@@ -288,8 +291,88 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "sns.lineplot(data=whole[['date', 'ozone_o3_column_number_density_amf', 'is_train']], x='date', y='ozone_o3_column_number_density_amf', hue='is_train')",
+   "id": "21f646258c227127",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sns.lineplot(data=whole[['date', 'ozone_o3_column_number_density', 'is_train']], x='date', y='ozone_o3_column_number_density', hue='is_train')",
+   "id": "90be1d5bbce84fb9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": "sns.lineplot(data=whole[['date', 'uvaerosolindex_sensor_altitude', 'is_train']], x='date', y='uvaerosolindex_sensor_altitude', hue='is_train')",
    "id": "561a86dda94c898e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sns.histplot(data=whole[['nitrogendioxide_tropopause_pressure', 'is_train']], x='nitrogendioxide_tropopause_pressure', hue='is_train')",
+   "id": "e3f2274372e8d5d0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sns.histplot(data=whole[['ozone_o3_column_number_density_amf', 'is_train']], x='ozone_o3_column_number_density_amf', hue='is_train')",
+   "id": "807fdb133b8ac23e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sns.histplot(data=whole[['ozone_o3_column_number_density', 'is_train']], x='ozone_o3_column_number_density', hue='is_train')",
+   "id": "cd6f3e2a456628d1",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sns.histplot(data=whole[['uvaerosolindex_sensor_altitude', 'is_train']], x='uvaerosolindex_sensor_altitude', hue='is_train')",
+   "id": "5b39cd27e9f892cd",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "ff832a511f03c57c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pd.concat([test['uvaerosolindex_sensor_altitude'].describe(), train['uvaerosolindex_sensor_altitude'].describe()], axis=1)",
+   "id": "e08e9b321464a5b7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pd.concat([test['nitrogendioxide_tropopause_pressure'].describe(), train['nitrogendioxide_tropopause_pressure'].describe()], axis=1)",
+   "id": "ab3bb09833029b1a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "limit = train.loc[(test['uvaerosolindex_sensor_altitude'].min() < train['uvaerosolindex_sensor_altitude']) & (train['uvaerosolindex_sensor_altitude'] > test['uvaerosolindex_sensor_altitude'].max()), :]",
+   "id": "2a9e6a7bfd680dae",
    "outputs": [],
    "execution_count": null
   }
