--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -225,9 +225,28 @@
    "cell_type": "markdown",
    "source": [
     "## <center>Czyszczenie danych</center>\n",
-    "### 1. Imputacja, usuwanie kolumn, oraz inne cuda"
+    "### Usunięcie wszystkich kolumn od sensor\n",
+    "\n",
+    "możliwa zależność z położeniem miasta"
    ],
    "id": "15ed92155a919761"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "train.drop(columns=[column for column in train.columns if 'sensor_zenith' in column or 'sensor_azimuth' in column], inplace=True)\n",
+    "test.drop(columns=[column for column in test.columns if 'sensor_zenith' in column or 'sensor_azimuth' in column], inplace=True)"
+   ],
+   "id": "91aca29d78476fee",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 1. Imputacja, usuwanie kolumn, oraz inne cuda",
+   "id": "edbdf2d6e665b166"
   },
   {
    "metadata": {},
@@ -274,12 +293,12 @@
     "    corr = train.corr(numeric_only=True)['pm2_5'].to_frame()\n",
     "    return corr[(corr['pm2_5'] < 0.01) & (corr['pm2_5'] > -0.01)].index.to_numpy()\n",
     "\n",
-    "def subract_azimuth_zenith(dataframe):\n",
+    "def merge_azimuth_zenith(dataframe):\n",
     "    zenith_columns = [zenith for zenith in dataframe.columns if 'zenith' in zenith]\n",
     "    azimuth_columns = [azimuth for azimuth in dataframe.columns if 'azimuth' in azimuth]\n",
     "    for i, zenith in enumerate(zenith_columns):\n",
     "        splitted = zenith.split('_')\n",
-    "        dataframe[f'{splitted[0]}_{splitted[1]}_diff'] = dataframe[zenith] - dataframe[azimuth_columns[i]]\n",
+    "        dataframe[f'{splitted[0]}_{splitted[1]}_merged'] = dataframe[zenith] * dataframe[azimuth_columns[i]]\n",
     "        dataframe.drop(zenith_columns[i], axis=1, inplace=True)\n",
     "        dataframe.drop(azimuth_columns[i], axis=1, inplace=True)\n",
     "    return dataframe\n",
@@ -296,7 +315,7 @@
     "# to_drop = drop_low_correlated_columns_to_pm2_5()\n",
     "# to_drop = np.concatenate((to_drop, drop_high_correlated_columns()), axis=0)\n",
     "# train, test = train.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
-    "# train, test = subract_azimuth_zenith(train), subract_azimuth_zenith(test)\n",
+    "# train, test = merge_azimuth_zenith(train), merge_azimuth_zenith(test)\n",
     "\n",
     "train.info()"
    ],
@@ -509,19 +528,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "# train_additional.drop(columns=['ID', 'humidity', 'temp_mean', 'device', 'site_latitude', 'site_longitude', 'date'], inplace=True)\n",
-    "# \n",
-    "# for name in train_additional.columns.values:\n",
-    "#     name_parts = name.split('_')\n",
-    "#     name_parts_lower = [x.lower() for x in name_parts]\n",
-    "#     train_additional.rename(columns={name: '_'.join(name_parts_lower)}, inplace=True)\n",
-    "# \n",
-    "# train = pd.concat([train, train_additional])\n",
-    "# train.reset_index(drop=True, inplace=True)\n",
-    "# \n",
-    "train.info()"
-   ],
+   "source": "train.info()",
    "id": "81a9005ec2b73b6a",
    "outputs": [],
    "execution_count": null
@@ -622,12 +629,6 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Wykorzystanie featuretools",
-   "id": "3714f2630c11f358"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": "### Usuwanie outlierów na podstawie rady marching_learning",
    "id": "da5a062992a03500"
   },
@@ -655,6 +656,27 @@
     "# train.info()"
    ],
    "id": "c152f1e37847488a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Limit wartości dla kolumn uvaerosolindex_sensor_altitude\n",
+    "ustawienie zakresu z zbioru test"
+   ],
+   "id": "e60d63f94b8462ee"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# limit = train.loc[(test['uvaerosolindex_sensor_altitude'].min() < train['uvaerosolindex_sensor_altitude']) & (train['uvaerosolindex_sensor_altitude'] > test['uvaerosolindex_sensor_altitude'].max()), :].index\n",
+    "# train.drop(index=limit, inplace=True)\n",
+    "# train.reset_index(drop=True, inplace=True)"
+   ],
+   "id": "d462302c8dc3bf20",
    "outputs": [],
    "execution_count": null
   },
@@ -814,6 +836,22 @@
     "test.to_csv(os.path.join('transform', 'test.csv'), index=False)"
    ],
    "id": "6fe27a6a613d3b3a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "train.info()",
+   "id": "b9cde137a4fa5773",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "test.info()",
+   "id": "d37364bf0c1f3c0f",
    "outputs": [],
    "execution_count": null
   },
