--- a/models.ipynb
+++ b/models.ipynb
@@ -128,7 +128,7 @@
     "        'max_bin': trial.suggest_int('max_bin', 10, 200),\n",
     "        'num_leaves': trial.suggest_int('num_leaves', 50, 300),\n",
     "        'max_depth': trial.suggest_int('max_depth', 5, 12),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 1e-4, 5e-2, log=True),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 9e-2, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 200, 700),\n",
     "        'tree_learner': 'voting',\n",
     "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.6, 1.0, log=True),\n",
@@ -139,7 +139,7 @@
     "        'device': 'cpu',\n",
     "        'n_jobs': -1,\n",
     "        'random_state': 4,\n",
-    "        'verbosity': -1\n",
+    "        'verbosity': -1,\n",
     "    }\n",
     "    return lgb.LGBMRegressor(**params)\n",
     "\n",
