--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "source": [
     "## <center>Czyszczenie danych</center>\n",
-    "### Usunięcie wszystkich kolumn od sensor\n",
+    "### Usunięcie wszystkich kolumn sensor_angle\n",
     "\n",
     "możliwa zależność z położeniem miasta"
    ],
@@ -239,6 +239,27 @@
     "test.drop(columns=[column for column in test.columns if 'sensor_zenith' in column or 'sensor_azimuth' in column], inplace=True)"
    ],
    "id": "91aca29d78476fee",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Usunięcie wszystkich kolumn sensor\n",
+    "\n",
+    "możliwa zależność z położeniem miasta"
+   ],
+   "id": "4b2401b22b7cf95b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "train.drop(columns=[column for column in train.columns if 'sensor' in column], inplace=True)\n",
+    "test.drop(columns=[column for column in test.columns if 'sensor' in column], inplace=True)"
+   ],
+   "id": "b58de31febe76f52",
    "outputs": [],
    "execution_count": null
   },
